Lots of JW updates. See NEWS for v 0.0.1.0009

--- a/inst/rmarkdown/templates/idreport/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/idreport/skeleton/skeleton.Rmd
@@ -8,6 +8,7 @@ output:
   bookdown::word_document2:
      number_sections: false
      toc: true
+     reference_docx: "template.docx"
 ---
 
 ```{r setup, include=FALSE}
@@ -23,11 +24,12 @@ library(idstyle)
 gtsummary::theme_gtsummary_journal("jama", set_theme = TRUE)
 hh <- here::here
 theme_set(cowplot::theme_cowplot())
+
 # Get Tables
-tab_use <- pull_tables()
+# tab_use <- pull_tables()
 
 # Get Figures
-fig_use <- pull_figures()
+# fig_use <- pull_figures()
 ```
 
 
