--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,6 @@
 ---
 output: github_document
+always_allow_html: true
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -9,8 +10,9 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%"
-)
+  out.width = "100%",
+  fig.width=6, fig.height=3.5,
+  fig.showtext = TRUE,dpi = 300)
 ```
 
 # idstyle
@@ -28,6 +30,120 @@ You can install the development version of idstyle like so:
 ``` r
 remotes::install_github("wf-id/idstyle")
 ```
+
+## Examples
+
+### Tables
+
+Flextable formatting:
+
+ - Black & white (default)
+
+```{r}
+suppressPackageStartupMessages(library(tidyverse))
+suppressPackageStartupMessages(library(idstyle))
+head(mtcars) |> format_flex_table() 
+```
+
+ - "wake" color
+ 
+```{r}
+head(mtcars) |> format_flex_table(color = 'wake') 
+```
+
+### Plots
+
+
+ - Points with wake gold default
+ 
+```{r}
+ggplot(mtcars, aes(x = mpg, y = hp)) +
+  geom_point(aes(color = carb))
+```
+
+ - Wake color palette for factors
+
+```{r}
+ggplot(mtcars) + geom_bar(aes(x = carb, fill = factor(carb)))
+```
+
+ - Label formatting
+ 
+```{r}
+gg2 <- mtcars |> ggplot(aes(x = mpg, y = hp, color = cut(mtcars$hp,6))) + #discrete scale
+  geom_point() + labs(title = 'This is a title for my graph',
+                      subtitle = 'This is a subtitle for my graph',
+                      caption = 'This is a caption for my graph',
+                      color = 'HP')
+gg2
+```
+
+ - Grids
+ 
+```{r}
+gg2 + theme_wake(grid = 'both') +
+  labs(title = 'Now with grids!')
+```
+
+ - Facets
+
+```{r}
+gg2 + facet_wrap(~gear) + theme_wake_facet(grid = 'y') +
+  labs(title = 'Some facets! And y grids only')
+
+```
+
+ - Interactive
+
+```{r eval=knitr::is_html_output()}
+
+plotly::ggplotly(gg2)
+
+```
+
+
+
+ - Theme Updating (ggplot2 default)
+
+
+```{r}
+
+theme_set_gg()
+ggplot(mtcars) + geom_bar(aes(x = carb, fill = factor(carb)))
+
+```
+
+ - Theme Updating (Atrium default)
+
+```{r}
+
+theme_set_atrium()
+ggplot(mtcars) + geom_bar(aes(x = carb, fill = factor(carb)))
+
+theme_set_wake() #and back to wake for future graphics
+
+```
+ 
+ - Font Awesome
+ 
+```{r}
+
+mtcars |> ggplot(aes(x = mpg, y = hp)) +
+  geom_fontawesome('head-side-virus', size = 10) +
+  labs(title = 'Using a font awesome icon')
+
+
+mtcars |> 
+  mutate(myicon = if_else(am==0, 'robot','user')) |>
+  ggplot(aes(x = mpg, y = hp, color = factor(gear), fill = factor(gear))) +
+  geom_fontawesome(myicon, size = 10) +
+  labs(title = 'Using font awesome icons in dataset') +
+  guides(color = guide_legend(override.aes = aes(label = "■"))
+         ) #otherwise "a" is in legend
+
+```
+
+
 ## Terms of Use
 
 You should not rely on this Website for medical advice or guidance.
